# smartrodent_experiments

./: .gitignore  LICENSE  README.md  datasets.dvc  pyproject.toml  requirements_processing.txt
config/: central_europe.json
configs/: config_central_europe.json  config_muridae.json  config_srilanka.json  data_config_central_europe.json  data_config_central_europe.yaml  data_config_muridae.yaml  data_config_srilanka.yaml  detector_experiments.json  detector_experiments.yaml  filter_data_vlm_config.yaml  train_detector_config.json  train_yolo_detector_config.json  train_yolo_detector_config.yaml
datasets/: biotrove-central-europe.dvc  training-central-europe.dvc
notebooks/: ammico_demo_getting_started.ipynb  evaluate_model_results.ipynb  explore_data.ipynb  process_biotrove.ipynb  train_speciesnet.ipynb  train_yolo.ipynb
notes/: notes.md  overview_faunanet.html  overview_faunanet_record.html  smartrodent architecture.drawio  species.md  yolo26_dataset_preparation.md
research/outputs/: rodent-image-datasets.provenance.md
research/outputs/.drafts/: rodent-image-datasets-draft.md  rodent-image-datasets-research-direct.md  rodent-image-datasets-verification.md
research/outputs/.plans/: rodent-image-datasets.md
scripts/: explore_data.py  filter.py  filter_data_clipish.py  filter_data_vlm.py  species_script.py
src/smartrodent/: __init__.py  base.py  dataprocessing.py  detection.py  inaturalist.py  main.py  ollama_filter.py  training.py  utils.py  vl_detection.py
src/smartrodent/biotrove_process/: __init__.py  biotrove_process.py  gen_filtered_shuffled_chunks.py  gen_img_txt_pair.py  get_imgs.py  metadata_processor.py  plotting_func.py
tests/: conftest.py  test_detectorbase.py  test_detectorexperiment.py  test_yolodetector.py  test_yoloedetector.py
