[project]
name = "rodent-experiments"
version = "0.1.0"
description = "Machine-learning for the SENTINEL-RAT/SmartRodent project"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets",
    "hf-datasets",
    "matplotlib",
    "numpy",
    "polars",
    "pyaml",
    "species",
    "ultralytics",
    "torch",
    "torchvision",
    "open-clip-torch",
    "seaborn",
    "scikit-learn",
    "ollama",
    "pytorchwildlife",
    "soundfile",
    "librosa",
    "pyinaturalist",
    "dvclive",
]

[project.optional-dependencies]
vlm = ["ammico[api]"]

dev = ["pytest", "pytest-cov", "coverage", "pre-commit", "pytest-mock"]

[tool.uv.sources]
# The PyPI release of ammico (<=0.2.6) still depends on the old, unmaintained
# stack (numpy<=1.23.4, deepface, tensorflow, googletrans==4.0.0rc1 prerelease)
# which cannot be resolved alongside modern torch/numpy/ultralytics. The GitHub
# main branch dropped all of that in favor of VLM inference over an
# OpenAI-compatible HTTP API (the "api" extra), so pin to it instead of PyPI.
ammico = { git = "https://github.com/ssciwr/AMMICO.git" }

# clip from openai needs to be installed from git too
clip = { git = "https://github.com/openai/CLIP.git" }

[tool.coverage.run]
branch = true
source = ["./src/smartrodent"]

[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_also = [
    # Don't complain about missing debug-only code:
    "def __repr__",
    "if self\\.debug",

    # Don't complain if non-runnable code isn't run:
    "if __name__ == .__main__.:",

    # Don't complain about abstract methods, they aren't run:
    "@(abc\\.)?abstractmethod",
]
fail_under = 80

[tool.coverage.html]
directory = "coverage_html_report"
