[project]
name = "rodent-experiments"
version = "0.1.0"
description = "Machine-learning for the SENTINEL-RAT/SmartRodent project"
readme = "README.md"
requires-python = ">=3.14, <3.15"
dependencies = [
    "datasets",
    "hf-datasets",
    "matplotlib",
    "numpy",
    "polars",
    "pyyaml",
    "ultralytics",
    "torch",
    "torchvision",
    "open-clip-torch",
    "seaborn",
    "scikit-learn",
    "ollama",
    "pytorchwildlife",
    "soundfile",
    "pyinaturalist",
    "dvclive",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "coverage", "pre-commit", "pytest-mock"]

[tool.coverage.run]
branch = true
source = ["./src/smartrodent"]
omit = ["tests/*"]

[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_also = [
    # Don't complain about missing debug-only code:
    "def __repr__",
    "if self\\.debug",

    # Don't complain if non-runnable code isn't run:
    "if __name__ == .__main__.:",

    # Don't complain about abstract methods, they aren't run:
    "@(abc\\.)?abstractmethod",
]
fail_under = 80

[tool.coverage.html]
directory = "coverage_html_report"
